<resources>
    <string name="app_name">EightAssignment</string>

    <!-- Header Text -->
    <string name="find_fvt_food_txt">Find Your\nFavorite Food</string>

    <!-- Hint Text -->
    <string name="what_do_u_want">What do you want to order?</string>

    <!-- CardView Text -->
    <string name="special_deal">Special Deal For October</string>
    <string name="check_deal">Check Deal</string>

    <string name="nearest_restaurant">Nearest Restaurant</string>
    <string name="popular_menu">Popular Menu</string>
    <string name="view_more">View More</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="chats">Chats</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>