<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:exb_color="@color/button_text_color" />

    <item android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        app:exb_color="@color/button_text_color"/>

    <item android:id="@+id/cartFragment"
        android:title="@string/cart"
        android:icon="@drawable/ic_buy"
        app:exb_color="@color/button_text_color" />

    <item android:id="@+id/chatFragment"
        android:title="@string/chats"
        android:icon="@drawable/ic_chat"
        app:exb_color="@color/button_text_color"/>


</menu>